--- a/css/energy.css
+++ b/css/energy.css
@@ -77,22 +77,6 @@ a img {
   .close-filter-nav a {
     border: 1px solid #A7A9AC !important; }
 
-h1 {
-  font: 28px Arial,Helvetica,sans-serif !important;
-  font-weight: bold !important;
-  color: #001c50 !important;
-  text-transform: uppercase !important;
-  margin: 30px 0px 30px 0px !important; }
-
-h3 {
-  font: 16px Arial,Helvetica,sans-serif !important;
-  font-weight: bold !important;
-  margin: 20px 0px -15px 0px !important;}
-
- h4 {
-  font: 16px Arial,Helvetica,sans-serif  !important;
-  margin: 0px 0px 0px 0px !important; }
-  
 .container header {
   padding-top: 60px;
   padding-bottom: 20px;
@@ -808,3 +792,25 @@ h3 {
 
   .container .content .aggregate .aggregate_by ul {
     padding-top: 12px; } }
+
+h1 {
+  font: 28px Arial,Helvetica,sans-serif !important;
+  font-weight: bold !important;
+  color: #001c50 !important;
+  text-transform: uppercase !important;
+  margin: 30px 0px 30px 0px !important; }
+
+h3 {
+  font: 16px Arial,Helvetica,sans-serif !important;
+  font-weight: bold !important;
+  margin: 20px 0px -15px 0px !important;}
+
+ h4 {
+  font: 16px Arial,Helvetica,sans-serif  !important;
+  margin: 0px 0px 0px 0px !important; }
+  
+	
+.leaflet-popup-content {
+    line-height: 1.4;
+    margin: 8px;
+}
